# mini_girona

./: README.md
install/: local_setup.sh  setup.sh
install/cola2_control/lib/cola2_control/: logitech_fx10_to_teleoperation_node.py
install/cola2_control/share/cola2_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cola2_lib_ros/include/cola2_lib_ros/: captain_helper.h  diagnostic_helper.h  navigation_helper.h  param_loader.h  serviceclient_helper.h  setpoints_selector.h  this_node.h  (+1 more)
install/cola2_lib_ros/share/cola2_lib_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cola2_lib_ros/share/cola2_lib_ros/cmake/: ament_cmake_export_dependencies-extras.cmake
install/cola2_msgs/share/cola2_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cola2_msgs/share/cola2_msgs/action/: Pilot.idl
install/cola2_msgs/share/cola2_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  cola2_msgs__rosidl_typesupport_cppExport.cmake  cola2_msgs__rosidl_typesupport_introspection_cExport.cmake  export_cola2_msgs__rosidl_generator_cppExport.cmake  export_cola2_msgs__rosidl_generator_pyExport.cmake  export_cola2_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_cola2_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/cola2_msgs/share/cola2_msgs/msg/: AdisImu.idl  AdisImu.msg  BodyForceReq.idl  BodyVelocityReq.msg  CaptainStatus.idl  CaptainStatus.msg  DVL.msg  DVLBeam.idl  DecimalLatLon.idl  Float32Stamped.msg  FlsConfig.msg  ImageAcquisitionSettings.msg  KeyValueArray.idl  MissionState.msg  NavSts.msg  Setpoints.idl  Setpoints.msg  WorldWaypointReq.idl  WorldWaypointReq.msg
install/cola2_msgs/share/cola2_msgs/srv/: CamTrigger.srv  DigitalOutput.idl  Goto_Request.msg  MaxJoyVelocity.idl  MaxJoyVelocity_Request.msg  Mission.idl  Recovery.idl  Recovery_Request.msg  Section.idl
log/: latest_build
(+492 files in other folders)
