<?xml version="1.0"?>
<package format="3">
  <name>cola2_lib_ros</name>
  <version>24.1.2</version>
  <description>The cola2_lib ROS 2 package</description>

  <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
  <license>Iqua Robotics</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 Dependencies -->
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cola2_msgs</depend>

  <!-- System Dependencies -->
  <depend>OpenCV</depend>
  <depend>cola2_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
