<?xml version="1.0"?>
<package format="3">
    <name>cola2_msgs</name>
    <version>24.1.0</version>
    <description>The cola2_msgs package</description>
    <maintainer email="software@iquarobotics.com">Iqua Robotics</maintainer>
    <license>Iqua Robotics</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rosidl_default_generators</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
 
    <build_depend>builtin_interfaces</build_depend>

   

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

